# phackman

./: .gitignore  .gitmodules  CMakeLists.txt  GDD.md  README.md  update-assets.sh
assets/: anim-phackman.ase  anim-phackman.json  bitcell_big.font  bitcell_small.font  bitcell_super.font  bomb.aseprite  bomb.json  bombareaexplosion.aseprite  bombareaexplosion.json  buildings.ase  enemy2.ase  enemy2.json  explosion.ase  explosion.json  laser.ase  maptiles.ase  maptiles.sheet  phakman.ase  spawner.ase  spawner.json  thepal.ase
cmake/: FindAllegro.cmake  mingw-toolchain.cmake
doc/: GDD.md  scrap.graphml
gameloadsrc/: main.cpp
script/: add-component.sh  deploy-win32.sh  makecbproj.sh  test-win32.sh  update-assets.sh
scripts/: genie.lua
src/: boot.cpp  constants.h  main.cpp
src/ai/: blackboard.cpp  blackboard.h  pfmap.cpp  pfmap.h
src/app/: allegroapp.cpp  allegroapp.h
src/core/: allegroapp.cpp  allegroapp.h  animation.cpp  animation.h  direction.cpp  direction.h  facing.cpp  facing.h  gameworld.cpp  gameworld.h  geometry.h  input.cpp  input.h  iscreen.cpp  iscreen.h  matrix.h  persistentdata.cpp  persistentdata.h  spritesheet.cpp  spritesheet.h
src/core/gadget/: gadget.cpp  gadget.h  lasergadget.h
src/core/skill/: lasergadget.cpp  lasergadget.h  skill.cpp  skill.h
src/debug/: mapsoliddebug.h
src/ecs/: components.h  entityfactory.cpp  entityfactory.h  systems.h  world.cpp  world.h
src/ecs/component/: agentinputcomponent.h  agentmapstatecomponent.h  aiagentrandomwandercomponent.h  alwayshootcomponent.h  animationcomponent.h  animatorcomponent.h  bombcomponent.h  bulletcomponent.h  cellcomponent.h  colortintcomponent.h  components.h  cruciblecomponent.h  damagecomponent.h  deathtimercomponent.h  diecomponent.h  dieonstopcomponent.h  enemycomponent.h  facingcomponent.h  fadecomponent.h  floatingcomponent.h  hadroncollisioncomponent.h  healthcomponent.h  infectcomponent.h  keyboardinputcomponent.h  mapagentinputcomponent.h  mapagentstatecomponent.h  mapawarenesscomponent.h  movementinputcomponent.h  ondeathactioncomponent.h  powerconsumercomponent.h  reinforcecomponent.h  rendercomponent.h  renderfacingcomponent.h  resourcestoragecomponent.h  shootatsightcomponent.h  shootcomponent.h  skillsetcomponent.h  spawncomponent.h  textcomponent.h  tilecomponent.h  (+4 more)
src/ecs/system/: aiagentrandomwandersystem.h  alwaysshootsystem.h  animationsystem.h  animatorsystem.h  bombsystem.h  computetilesystem.h  cruciblesystem.h  damage.h  damagesystem.h  deathcountdownsystem.h  dieonstopsystem.h  diesystem.h  disableshootwhenunpoweredsystem.h  facingrenderingsystem.h  fadingsystem.h  floatingsystem.h  gadgetsystem.h  hadroncollisionsystem.h  healthsystem.h  infectionsystem.h  keyboardinputsystem.h  mapawarenesssystem.h  mapnavigationsystem.h  placeinmapsystem.h  playerinputsystem.h  poweringsystem.h  reinforcingsystem.h  renderingsystem.cpp  renderingsystem.h  shootatsightsystem.h  shootingsystem.cpp  shootingsystem.h  spawnsystem.h  systemgroups.h  systems.h  textrenderingsystem.h  triggersystem.cpp  triggersystem.h  unpoweredgraphicoverridingsystemsystem.h  wallawareplacementsystem.h  (+1 more)
src/game/: assets.cpp  assets.h  ecsscreen.cpp  ecsscreen.h  entity.cpp  entity.h  game.cpp  game.h  gameinstance.h  gameplayscreen.cpp  gameplayscreen.h  mainmenuscreen.cpp  mainmenuscreen.h  menuscreen.cpp  menuscreen.h  nextlevelscreen.cpp  nextlevelscreen.h  phackmangame.cpp  phackmangame.h  player.cpp  player.h  youdiescreen.cpp  youdiescreen.h
src/map/: mapgen.cpp  mapgen.h  mapscene.cpp  mapscene.h  maputil.cpp  maputil.h  placementmap.h
src/mapgen/: mapgen.cpp  mapgen.h  maputil.cpp  maputil.h
